<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>com.pratikdairy.parent</groupId>
		<artifactId>pratik-dairy-parent</artifactId>
		<version>0.0.1-SNAPSHOT</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>


	<groupId>com.pratikdairy.order</groupId>
	<artifactId>pratik-dairy-order</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>pom</packaging>
	<name>pratik-dairy-order</name>
	<description>Pratik Dairy and Sweets Order Service</description>
	<modules>
		<module>order-api</module>
		<module>order-service</module>
		<module>order-app</module>
	</modules>


	<properties>
		<java.version>21</java.version>
	</properties>


	<dependencies>
		<dependency>
			<groupId>com.pratikdairy.parent</groupId>
			<artifactId>pratik-dairy-core</artifactId>
			<version>0.0.1-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>com.pratikdairy.product</groupId>
			<artifactId>product-api</artifactId>
			<version>0.0.1-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>com.pratikdairy.user</groupId>
			<artifactId>user-api</artifactId>
			<version>0.0.1-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>com.pratikdairy.cart</groupId>
			<artifactId>cart-api</artifactId>
			<version>0.0.1-SNAPSHOT</version>
		</dependency>
	</dependencies>


	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<annotationProcessorPaths>
						<path>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
						</path>
					</annotationProcessorPaths>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>
